Fixed spacing problem with footer element, again.

--- a/main.css
+++ b/main.css
@@ -61,7 +61,7 @@ input[type="radio"] {
     left: 0;
     bottom: 0;
     height: 30vh;
-    top: 30vh;
+    margin-top: 30vh;
 }
 
 .footer .content {
